--- a/ServicePage.xaml
+++ b/ServicePage.xaml
@@ -54,7 +54,7 @@
         <ListView Name="ServiceListView" Grid.Row="1">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid Background="{Binding FonStyle}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
