--- a/ServicePage.xaml
+++ b/ServicePage.xaml
@@ -57,7 +57,7 @@
                     <Grid Background="{Binding FonStyle}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition Width="500"></ColumnDefinition>
                             <ColumnDefinition></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
@@ -68,7 +68,7 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         
-                        <Image Width="150" Grid.Column="0" Stretch="UniformToFill" HorizontalAlignment="Center" Grid.RowSpan="5">
+                        <Image Width="180" Grid.Column="0" Stretch="UniformToFill" HorizontalAlignment="Center" Grid.RowSpan="5">
                             <Image.Source>
                                 <Binding Path="Logo">
                                     <Binding.TargetNullValue>
@@ -84,13 +84,15 @@
                             <TextBlock Text="{Binding AgentTypeText, StringFormat={}{0} | }" HorizontalAlignment="Left" FontSize="20"></TextBlock>
                             <TextBlock Text="{Binding Title }" HorizontalAlignment="Right" FontSize="20"></TextBlock>
                         </StackPanel>
-                        <!--<TextBlock Text="{Binding Count}" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" FontSize="20"></TextBlock>-->
+                        <TextBlock Text="{Binding Prod, StringFormat={}Продажи за год: {0}}" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" FontSize="16"></TextBlock>
                         <TextBlock Text="{Binding Phone}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" FontSize="20"></TextBlock>
                         <TextBlock Text="{Binding Priority, StringFormat={}Приоритетность: {0}}" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" FontSize="16"></TextBlock>
 
                         <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
                             <Button Name="EditButton" Content="редактировать" Margin="2" Click="EditButton_Click" Background="#B175EE"></Button>
                         </StackPanel>
+
+                        <TextBlock Text="{Binding SkidkaInt, StringFormat={}Скидка: {0}}" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right" FontSize="20"></TextBlock>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
