--- a/AddEditPage.xaml
+++ b/AddEditPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SharafutdinovGlazkiSave2"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="800" d:DesignWidth="800"
       Title="AddEditPage">
 
     <Grid>
@@ -23,6 +23,9 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
+        <Button Name="CostHistory" Content="Продажи" Click="CostHistory_Click" Grid.Row="6" 
+                 HorizontalAlignment="Left" VerticalAlignment="Center"/>
+
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
             <TextBlock Text="Наименование" FontSize="15" Height="20" MinWidth="120" Width="auto" Margin="5"></TextBlock>
             <TextBox Text="{Binding Title}" FontSize="15" Height="20" Width="400"></TextBox>
@@ -35,7 +38,7 @@
             <TextBlock Text="Директор" FontSize="15" Height="20" MinWidth="120" Width="auto" Margin="5"></TextBlock>
             <TextBox Text="{Binding DirectorName}" FontSize="15" Height="20" Width="400"></TextBox>
         </StackPanel>
-        <StackPanel Grid.Column="0" Grid.Row="3" Orientation="Vertical" Grid.RowSpan="4">
+        <StackPanel Grid.Column="0" Grid.Row="3" Orientation="Vertical" Grid.RowSpan="4" >
             <TextBlock Text="Логотип" FontSize="15" Height="20" Width="auto" Margin="5"></TextBlock>
             <Image Name="LogoImage" Stretch="UniformToFill" MinHeight="50" Height="100" Width="100"
                    HorizontalAlignment="Center" Margin="5">
@@ -50,11 +53,11 @@
             <TextBlock Text="Тип агента" FontSize="15" Height="20" Width="100" Margin="5"></TextBlock>
             <ComboBox FontSize="15" Height="25" Width="100" Name="ComboType"
                       Text="{Binding AgentTypeID}">
-                <TextBlock Text="МФО"/>
-                <TextBlock Text="ООО"/>
                 <TextBlock Text="ЗАО"/>
                 <TextBlock Text="МКК"/>
+                <TextBlock Text="МФО"/>
                 <TextBlock Text="ОАО"/>
+                <TextBlock Text="ООО"/>
                 <TextBlock Text="ПАО"/>
             </ComboBox>
         </StackPanel>
